--- a/Juniors/CSS Grid/index.html
+++ b/Juniors/CSS Grid/index.html
@@ -9,9 +9,13 @@
 <body>
     <h1>Welcome to CSS Grid</h1>
     <div class="container">
-        <div class="item item-1"></div>
-        <div class="item item-2"></div>
-        <div class="item item-3"></div>
+        <div class="item item-1">First Name</div>
+        <div class="item item-2">Last Name</div>
+        <div class="item item-3">Student ID</div>
+        <div class="item item-4">Bob</div>
+        <div class="item item-5">The Builder</div>
+        <div class="item item-6">8675309</div>
+        <div class="item item-7">Bob's Bio Here. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, tempora.</div>
     </div>
 </body>
 </html>
